--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main{
     width: 100%;
     padding:40px 30px;
     background: white;
-    background-image: url("img/Muñeco.png");
+    background-image: url("./img/Muñeco.png");
     background-repeat: no-repeat;
     background-position: center;
     border: none;
